--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ table[class^="views-table views-view-table cols-4"] caption {
 
 /* Styles for Keyform Submission Page */
 tr.Submitted, tr.Replacement, tr.Other {
-	background-color: #fcc9d4;
+	background-color: #fcc9d4 !important;
 }
 tr.Reviewed {
 	background-color: #ffedd4;
