--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 
 /* This class is for grouping header used on people's page */
 .view-grouping-header {
-	background-color: #ccc; 
-	padding: .5em; 
+	background-color: #ccc;
+	padding: .5em;
 	margin: 0.5em auto;
 	color: #002855;
 	font-weight: 700;
@@ -100,7 +100,7 @@ table[class^="views-table views-view-table cols-4"] caption {
 	border: 1px solid #ccc;
 	padding: 2px 10px;
 	height: 16em;
-	overflow-y: scroll;  
+	overflow-y: scroll;
 }
 
 /* Hide the custom separator block */
@@ -154,4 +154,14 @@ tr.Reviewed, tr.HardKey {
 
 .services-h3 {
 	line-height: 2;
+}
+
+/* GSR Form */
+.gsr-radio-check .form-radios {
+    margin-top: -15px;
+}
+
+.error-message {
+	font-size: 0.8rem;
+	color: red;
 }
