fixed css issue

--- a/vue_blocks/vue_gsr_block/styles/styles.css
+++ b/vue_blocks/vue_gsr_block/styles/styles.css
@@ -28,7 +28,7 @@ hr {
     color: #999;
 }
 .l-content {
-    container-type: unset;
+    container-type: unset !important;
 }
 
 /*------Loader------*/
