--- a/vue_blocks/vue_assignments_block/styles/styles.css
+++ b/vue_blocks/vue_assignments_block/styles/styles.css
@@ -435,3 +435,7 @@ a.fa-single-edit:visited {
     padding: 0.5rem 1rem;
     background-color: rgba(0,0,0,.03);
 }
+.text-count-message {
+    color: #C10230;
+    font-size: small;
+}
