node teaser fixed

--- a/templates/content/node--teaser.html.twig
+++ b/templates/content/node--teaser.html.twig
@@ -98,7 +98,7 @@
   <div class="o-media__body">
     {{ title_prefix }}
 	{% if node.type.entity.label != 'People' %}
-        <h3{{ title_attributes.addClass('vm-teaser__title') }}><a href="{{ url }}" rel="bookmark">{{ label }}</a></h3>
+        <h3>{{ title_attributes.addClass('vm-teaser__title') }}><a href="{{ url }}" rel="bookmark">{{ label }}</a></h3>
 	{% endif %}
 	{% set fullname %}
       {{ content.field_sf_name_prefix }} {{ content.field_sf_first_name }} {{ content.field_sf_middle_initial }} {% spaceless %}{{ content.field_sf_last_name }}{% endspaceless %}
