--- a/vue_blocks/vue_gsr_block/styles/styles.css
+++ b/vue_blocks/vue_gsr_block/styles/styles.css
@@ -309,7 +309,7 @@ label.radio-check-label {
 input[type="text"], input[type="number"], input[type="email"], input[type="date"], select {
     height: 2.5em !important;
 }
-input[type="text"], input[type="number"], input[type="email"], input[type="date"], select, textarea {
+input[type="text"]:not(.search-input, .input-wrap), input[type="number"]:not(.search-input, .input-wrap), input[type="email"]:not(.search-input, .input-wrap), input[type="date"]:not(.search-input, .input-wrap), select:not(.search-input, .select-wrap), textarea:not(.search-input, .input-wrap) {
     border: 1px solid #ccc !important;
     border-radius: 0 !important;
     padding: .25em .75em !important;
@@ -479,4 +479,54 @@ a.fa-single-edit:visited {
 }
 .btn-resend:hover {
     color: #00b2e3 !important;
+}
+.search-input {
+    font-size: 0.75rem !important;
+    margin-bottom: 0.25rem !important;
+    border: 1px solid #ccc !important;
+    border-radius: 0 !important;
+    padding: .25em .75em !important;
+    background-color: #fff !important;
+    background-image: none !important;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.075) inset !important;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.075) inset !important;
+    color: #555 !important;
+    font-family: inherit;
+    outline: 0 !important;
+	width: 100% !important;
+}
+.input-wrap {
+    font-size: 0.75rem !important;
+    border: 1px solid #ccc !important;
+    border-radius: 0 !important;
+    padding: .25em .75em !important;
+    background-color: #fff !important;
+    background-image: none !important;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.075) inset !important;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.075) inset !important;
+    color: #555 !important;
+    font-family: inherit;
+    outline: 0 !important;
+}
+
+.select-wrap {
+    font-size: 0.75rem !important;
+    border: 1px solid #ccc !important;
+    border-radius: 0 !important;
+    padding: .25em .75em !important;
+    background-color: #fff !important;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.075) inset !important;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.075) inset !important;
+    color: #555 !important;
+    font-family: inherit;
+    outline: 0 !important;
+}
+
+.input-group-custom {
+    margin-bottom: 0.25rem !important;
+}
+.input-group-text-custom {
+    line-height: 1.2 !important;
+    font-size: 0.75rem !important;
+    border-radius: 0 !important;
 }
